--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://api.fonts.coollabs.io" crossorigin />
+    <link
+      href="https://api.fonts.coollabs.io/css2?family=Inter:opsz@14..32&family=Plus+Jakarta+Sans:wght@400;600&family=Source+Serif+4:ital,opsz@0,8..60;1,8..60&family=Work+Sans:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <meta name="description" content="" />
 
     <meta property="og:title" content="" />
