--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <nav>
         <div class="logo-div">
           <svg
-            id="logo"
+            class="logo"
             width="132"
             height="35"
             viewBox="0 0 132 35"
