--- a/index.html
+++ b/index.html
@@ -88,7 +88,13 @@
         </div>
         <div class="search-theme-div">
           <div class="search-div">
-            <input type="search" name="" id="search-input" class="search" />
+            <input
+              type="search"
+              name=""
+              id="search-input"
+              class="search"
+              placeholder="Search"
+            />
             <svg
               width="16"
               height="16"
