--- a/index.html
+++ b/index.html
@@ -149,6 +149,12 @@
         </div>
       </nav>
     </header>
+    <seactin class="hero">
+      <!-- <img
+        src="https://picsum.photos/seed/picsum/1216/600"
+        alt="Random Image"
+      /> -->
+    </seactin>
     <script src="./js/app.js"></script>
   </body>
 </html>
