--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
       </nav>
     </header>
     <seactin class="hero">
-      <!-- <img
+      <img
         src="https://picsum.photos/seed/picsum/1216/600"
         alt="Random Image"
-      /> -->
+      />
     </seactin>
     <script src="./js/app.js"></script>
   </body>
