--- a/index.html
+++ b/index.html
@@ -154,6 +154,12 @@
         src="https://picsum.photos/seed/picsum/1216/600"
         alt="Random Image"
       />
+      <div class="hero-card">
+        <p class="hero-label">Technology</p>
+        <h1 class="hero-title">
+          The Impact of Technology on the Workplace: How Technology is Changing
+        </h1>
+      </div>
     </seactin>
     <script src="./js/app.js"></script>
   </body>
