--- a/index.html
+++ b/index.html
@@ -159,6 +159,19 @@
         <h1 class="hero-title">
           The Impact of Technology on the Workplace: How Technology is Changing
         </h1>
+        <div class="author-date-div">
+          <div class="author-div">
+            <img
+              src="https://picsum.photos/50"
+              alt="Random Image"
+              class="avatar"
+            />
+            <p class="author-name">Jason Francisco</p>
+          </div>
+          <div class="date-div">
+            <p class="date">August 20, 2022</p>
+          </div>
+        </div>
       </div>
     </seactin>
     <script src="./js/app.js"></script>
