--- a/index.html
+++ b/index.html
@@ -119,7 +119,13 @@
             </svg>
           </div>
           <div class="theme-item">
-            <button id="theme-btn" title="Toggle light &amp; dark">
+            <button
+              class="theme-toggle"
+              id="theme-toggle"
+              title="Toggles light &amp; dark"
+              aria-label="auto"
+              aria-live="polite"
+            >
               <svg
                 width="16"
                 height="16"
