--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               aria-label="auto"
               aria-live="polite"
             >
-              <svg
+              <!-- <svg
                 width="16"
                 height="16"
                 viewBox="0 0 16 16"
@@ -150,7 +150,7 @@
                     fill="currentColor"
                   />
                 </svg>
-              </svg>
+              </svg> -->
             </button>
           </div>
         </div>
