--- a/index.html
+++ b/index.html
@@ -97,35 +97,79 @@
               placeholder="Search"
             />
             <svg
+              class="search-icon"
               width="16"
               height="16"
               viewBox="0 0 16 16"
               fill="none"
-              class="search-icon"
+              stroke="currentColor"
+              stroke-width="1.33"
+              stroke-linecap="round"
+              stroke-linejoin="round"
             >
               <path
-                d="M6.90906 2C5.93814 2 4.98903 2.28791 4.18174 2.82733C3.37444 3.36674 2.74524 4.13343 2.37368 5.03045C2.00213 5.92746 1.90491 6.91451 2.09433 7.86677C2.28375 8.81904 2.75129 9.69375 3.43783 10.3803C4.12438 11.0668 4.99909 11.5344 5.95135 11.7238C6.90362 11.9132 7.89067 11.816 8.78768 11.4444C9.6847 11.0729 10.4514 10.4437 10.9908 9.63639C11.5302 8.8291 11.8181 7.87998 11.8181 6.90906C11.818 5.60712 11.3008 4.35853 10.3802 3.43792C9.45959 2.51731 8.211 2.00008 6.90906 2Z"
-                stroke="#52525B"
-                stroke-width="1.5"
-                stroke-miterlimit="10"
+                stroke="none"
+                d="M0 0h16v16H0z"
+                fill="none"
+                stroke-width="0.6666666666666666"
               />
               <path
-                d="M10.5715 10.5716L14 14"
-                stroke="#52525B"
-                stroke-width="1.5"
-                stroke-miterlimit="10"
-                stroke-linecap="round"
+                d="M2 6.667a4.667 4.667 0 1 0 9.333 0 4.667 4.667 0 1 0 -9.333 0"
               />
+              <path d="m14 14 -4 -4" />
             </svg>
           </div>
           <div class="theme-item">
             <button
-              class="theme-toggle"
-              id="theme-toggle"
+              class="theme-btn"
+              id="theme-btn"
               title="Toggles light &amp; dark"
               aria-label="auto"
               aria-live="polite"
             >
+              <svg
+                class="moon-icon"
+                width="16"
+                height="16"
+                viewBox="0 0 16 16"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="1.33"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path
+                  stroke="none"
+                  d="M0 0h16v16H0z"
+                  fill="none"
+                  stroke-width="0.6666666666666666"
+                />
+                <path d="M8 2h0.262a5 5 0 0 0 5.28 8.297A6 6 0 1 1 8 1.995z" />
+              </svg>
+              <svg
+                class="sun-icon"
+                width="16"
+                height="16"
+                viewBox="0 0 16 16"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="1.33"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path
+                  stroke="none"
+                  d="M0 0h16v16H0z"
+                  fill="none"
+                  stroke-width="0.6666666666666666"
+                />
+                <path
+                  d="M5.333 8a2.667 2.667 0 1 0 5.333 0 2.667 2.667 0 1 0 -5.333 0"
+                />
+                <path
+                  d="M2 8h0.667m5.333 -6v0.667m5.333 5.333h0.667m-6 5.333v0.667M3.733 3.733l0.467 0.467m8.067 -0.467 -0.467 0.467m0 7.6 0.467 0.467m-8.067 -0.467 -0.467 0.467"
+                />
+              </svg>
               <!-- <svg
                 width="16"
                 height="16"
