--- a/index.html
+++ b/index.html
@@ -129,45 +129,37 @@
             >
               <svg
                 class="moon-icon"
-                width="16"
-                height="16"
-                viewBox="0 0 16 16"
+                width="14"
+                height="14"
+                viewBox="0 0 14 14"
                 fill="none"
                 stroke="currentColor"
-                stroke-width="1.33"
+                stroke-width="1"
                 stroke-linecap="round"
                 stroke-linejoin="round"
               >
+                <path stroke="none" d="M0 0h14v14H0z" fill="none" />
                 <path
-                  stroke="none"
-                  d="M0 0h16v16H0z"
-                  fill="none"
-                  stroke-width="0.6666666666666666"
+                  d="M7 1.75h0.229a4.375 4.375 0 0 0 4.62 7.26A5.25 5.25 0 1 1 7 1.745z"
                 />
-                <path d="M8 2h0.262a5 5 0 0 0 5.28 8.297A6 6 0 1 1 8 1.995z" />
               </svg>
               <svg
                 class="sun-icon"
-                width="16"
-                height="16"
-                viewBox="0 0 16 16"
+                width="14"
+                height="14"
+                viewBox="0 0 14 14"
                 fill="none"
                 stroke="currentColor"
-                stroke-width="1.33"
+                stroke-width="1"
                 stroke-linecap="round"
                 stroke-linejoin="round"
               >
+                <path stroke="none" d="M0 0h14v14H0z" fill="none" />
                 <path
-                  stroke="none"
-                  d="M0 0h16v16H0z"
-                  fill="none"
-                  stroke-width="0.6666666666666666"
+                  d="M4.667 7a2.333 2.333 0 1 0 4.667 0 2.333 2.333 0 1 0 -4.667 0"
                 />
                 <path
-                  d="M5.333 8a2.667 2.667 0 1 0 5.333 0 2.667 2.667 0 1 0 -5.333 0"
-                />
-                <path
-                  d="M2 8h0.667m5.333 -6v0.667m5.333 5.333h0.667m-6 5.333v0.667M3.733 3.733l0.467 0.467m8.067 -0.467 -0.467 0.467m0 7.6 0.467 0.467m-8.067 -0.467 -0.467 0.467"
+                  d="M1.75 7h0.583M7 1.75v0.583M11.667 7h0.583M7 11.667v0.583M3.267 3.267l0.408 0.408m7.058 -0.408 -0.408 0.408m0 6.65 0.408 0.408m-7.058 -0.408 -0.408 0.408"
                 />
               </svg>
               <!-- <svg
